# Smuggler

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  SKILLS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  sonar-project.properties  start.sh
.github/workflows/: desktop-ci.yml  docker-ci.yml  frontend-ci.yml  python-ci.yml
api/: app.py  configs.py  database.py  mules.py  run.py  schemas.py  settings.py  settings_sync.py  stats.py  torrents.py  watchdog.py  workers.py
cli/: aria2_client.py  docker_client.py  log.py  main.py  mule_commands.py  torrent_commands.py  worker_commands.py
desktop/: build.gradle  settings.gradle
docker/: Dockerfile.api  Dockerfile.web  nginx.conf
tests/: conftest.py  test_api_configs.py  test_api_mules.py  test_api_settings.py  test_api_settings_sync.py  test_api_stats.py  test_api_torrents.py  test_api_watchdog.py  test_api_workers.py  test_aria2_client.py  test_database.py  test_docker_client.py  test_mule_commands.py  test_torrent_commands.py  test_worker_commands.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: AddTorrentModal.tsx  DeleteTorrentModal.tsx  DeployMuleModal.tsx  MuleCard.tsx  NotificationBell.tsx  SpeedGraph.tsx  StatsBar.tsx  StatusFooter.tsx  TorrentRow.tsx  WorkerCard.tsx
web/src/context/: NotificationContext.tsx
web/src/pages/: ConfigsPage.tsx  MulesPage.tsx  (+3 more)
worker_image/: Dockerfile  startup.sh
worker_image_ovpn/: Dockerfile  startup.sh
(+31 files in other folders)
