[project]
name = "dvd"
version = "0.1.0"
description = "Dockerized VPN Downloader — isolated torrent workers behind WireGuard"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "docker>=7.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
dvd = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cli"]
