[project]
name = "smuggler"
version = "0.1.0"
description = "Smuggler — isolated torrent downloads behind per-mule WireGuard VPN tunnels"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "docker>=7.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
smg = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["cli", "api"]
